18th Amendment font fix

--- a/eighteenthamendment-com/index.html
+++ b/eighteenthamendment-com/index.html
@@ -733,7 +733,7 @@
 
             .mobile-nav__item a {
                 display: block;
-                font-family: Roboto Condensed;
+                font-family: "Roboto Condensed", sans-serif;
                 font-size: 14px;
                 text-transform: uppercase
             }
